Update work descriptions for clarity and detail

--- a/index.html
+++ b/index.html
@@ -414,22 +414,22 @@
 
                 <div class="work-item">
                     <div class="work-title"><a href="https://a1research.io/blog/the-state-of-the-clob-wars" target="_blank">The State of the CLOB Wars</a></div>
-                    <div class="work-desc">Analysis of central limit order book exchanges</div>
+                    <div class="work-desc">Analysis of onchain central limit order book exchanges</div>
                 </div>
 
                 <div class="work-item">
                     <div class="work-title"><a href="https://a1research.io/blog/from-hyperliquid-to-paradex-bullet-hibachi-and-lighter-the-rise-of-clob-appchains" target="_blank">Rise of CLOB Appchain</a></div>
-                    <div class="work-desc">From Hyperliquid to Paradex, exploring appchain innovations</div>
+                    <div class="work-desc">From Hyperliquid to Paradex, exploring appchains </div>
                 </div>
 
                 <div class="work-item">
                     <div class="work-title"><a href="https://web3phronesis.substack.com/p/stablecoins-at-escape-velocity" target="_blank">Stablecoins at Escape Velocity</a></div>
-                    <div class="work-desc">Institutional adoption and cross-chain infrastructure</div>
+                    <div class="work-desc"> Exploring Institutional adoption and cross-chain infrastructure</div>
                 </div>
 
                 <div class="work-item">
                     <div class="work-title"><a href="https://nileresearch.substack.com/p/getting-wet-with-humidifi" target="_blank">Getting Wet with Humidifi</a></div>
-                    <div class="work-desc">Nile Research — analysis of proportional AMMs (prop AMMs)</div>
+                    <div class="work-desc"> Research on HumidiFi a Prop AMm</div>
                 </div>
 
             </div>
@@ -442,7 +442,7 @@
                 </div>
                 <div class="work-item">
                     <div class="work-title"><a href="https://qu.ai/blog/a-new-era-of-stablecoin-qi-the-energy-dollar/" target="_blank">Qi: The Energy Dollar</a></div>
-                    <div class="work-desc">Analysis of energy-backed stablecoin innovation</div>
+                    <div class="work-desc">Analysis of energy-backed stablecoin </div>
                 </div>
             </div>
             
