Add Ommiii Substack link to the CTA section

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
         <p class="handle">@Ommiii_</p>
         <h2 class="tagline">research. growth. content.</h2>
         <p class="subtitle">I help crypto projects bridge technical depth with clear narratives. 4 years working across research, marketing, and content strategy.</p>
-        <p class="cta">Currently writing at <a href="https://nileresearch.substack.com/" target="_blank">Nile Research</a></p>
+        <p class="cta">Currently writing at <a href="https://nileresearch.substack.com/" target="_blank">Nile Research</a> · <a href="https://ommiii.substack.com/" target="_blank">Ommiii Substack</a></p>
     </header>
     
     <!-- Navigation Tabs -->
