Refactor About Me section and update clients
Updated comments and removed client cards.

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 <body>
     <div class="progress-bar" id="progressBar"></div>
 
-    <!-- About Me Hero (Zac-style block) -->
+    <!-- About Me Hero  -->
     <header class="about-hero">
         <p class="about-gm">gm,</p>
         <h1 class="about-name">I’m Omar.</h1>
@@ -426,13 +426,7 @@
     <!-- Clients Section -->
     <section id="clients" class="section active">
         <h2>Who I Have Worked With</h2>
-        <div class="clients-grid">
-            <div class="client-card">
-                <div class="client-name">Gear Protocol</div>
-                <div class="client-desc">Next-gen smart contract platform</div>
-                <div class="client-role">Freelance, 2025</div>
-            </div>
-            <div class="client-card">
+         <div class="client-card">
                 <div class="client-name">A1 Research</div>
                 <div class="client-desc">On-chain research &amp; analysis</div>
                 <div class="client-role">Freelance, 2025</div>
