Update index.html to add dashboard link for 2024-presidential-election-polymarket

--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
-<html>
-<head>
-    <title>Proof of Work</title>
-</head>
-<body>
-    <h1>Dashboards</h1>
+<section>
+    <h2>Dashboards</h2>
     <ul>
-        <li>Microbes NFTs (Dune)</li>
-        <li>2024-presidential-election-polymarket (Dune) - <a href="https://dune.com/Ommiii/2024-presidential-election-polymarket">Link</a> - Live Dune dashboard tracking 2024 Presidential Election Polymarket activity and metrics.</li>
+        <li><a href="https://example.com/microbes-nfts">Microbes NFTs Dashboard</a></li>
+        <li><a href="https://dune.com/Ommiii/2024-presidential-election-polymarket">2024-presidential-election-polymarket (Dune)</a></li>
     </ul>
-</body>
-</html>
+    <p>Live Dune dashboard tracking 2024 Presidential Election Polymarket activity and metrics.</p>
+</section>
