Update index.html to add the 2024 Presidential Election Polymarket dashboard next to the Microbes NFTs dashboard.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
-<h2>Dashboards</h2>
-<ul>
-    <li>
-        <h3>Microbes NFTs</h3>
-        <a href="https://example.com/microbes-nfts">Link</a>
-    </li>
-    <li>
-        <h3>2024-presidential-election-polymarket (Dune)</h3>
-        <a href="https://dune.com/Ommiii/2024-presidential-election-polymarket">Link</a>
-        <p>Live Dune dashboard tracking 2024 Presidential Election Polymarket activity and metrics.</p>
-    </li>
-</ul>
+            <div class="year-group">
+                <div class="work-item">
+                    <div class="work-title">
+                        <a href="https://dune.com/Ommiii/microbes-nfts" target="_blank">
+                            Microbes NFTs (Dune)
+                        </a>
+                    </div>
+                    <div class="work-desc">Live Dune dashboard tracking Microbes NFT activity and metrics.</div>
+                </div>
+                <div class="work-item">
+                    <div class="work-title">
+                        <a href="https://dune.com/Ommiii/2024-presidential-election-polymarket" target="_blank">
+                            2024 Presidential Election Polymarket (Dune)
+                        </a>
+                    </div>
+                    <div class="work-desc">Live Dune dashboard tracking 2024 Presidential Election Polymarket activity and metrics.</div>
+                </div>
+            </div>
